clusters/cl01tl/manifests/searxng/HTTPRoute-http-route-searxng.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-searxng
  namespace: searxng
  labels:
    app.kubernetes.io/name: http-route-searxng
    app.kubernetes.io/instance: searxng
    app.kubernetes.io/part-of: searxng
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - searxng.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: searxng-browser
          port: 80
          weight: 100
